<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:edl="http://ui.edlplan.com/customview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frgDialogStyleBackground"
    android:id="@+id/frg_background">

    <RelativeLayout
        android:id="@+id/frg_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:clickable="true"
        android:orientation="vertical">

        <com.edlplan.ui.TriangleEffectView
            android:layout_width="430dp"
            android:layout_height="130dp"
            edl:edgeClampRate="1.0"
            android:layout_centerInParent="true" />

        <View
            android:id="@+id/update_card"
            android:layout_width="370dp"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rect"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:alpha="0.7"
            android:layout_alignTop="@id/update_card"
            android:layout_centerHorizontal="true"
            android:layout_width="370dp"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/triangleBackground" />

            <com.edlplan.ui.TriangleEffectView
                edl:freeze="true"
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </RelativeLayout>

        <com.edlplan.ui.TriangleEffectView
            android:layout_width="430dp"
            android:layout_height="130dp"
            edl:freeze="true"
            edl:edgeClampRate="1.0"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/update_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_rect_alpha"
                android:padding="10dp"
                android:text="@string/update_dialog_message"
                android:textColor="#FF3333"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="-5dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/laterButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_dialog_button_later"
                    android:textColor="#FF5722"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/updateButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_dialog_button_update"
                    android:textColor="#FF5722"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/changelogButton"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_dialog_button_changelog"
                    android:textColor="#FF5722"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>